added files in Responsive-Web-Design

--- a/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/06. Comment out HTML.html
+++ b/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/06. Comment out HTML.html
@@ -1,7 +1,9 @@
 
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
 
 Comment your h1 element
 Comment your p element
+
+using <!-- -->
 
 ❌Don't comment your h2 element
