--- a/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/11. Link to Internal Sections of a Page with Anchor Elements.html
+++ b/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/11. Link to Internal Sections of a Page with Anchor Elements.html
@@ -1,6 +1,6 @@
 
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
 
-<a href=”#footer”>Jump to Bottom</a>
+<a href="#footer">Jump to Bottom</a>
 
 <footer id=”footer”>Copyright Cat Photo App</footer>
