--- a/Responsive-Web-Design-Certification/2. Basic-CSS/03. Use a CSS Class to Style an Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/03. Use a CSS Class to Style an Element.html
@@ -1,9 +1,9 @@
 
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
 
 <!-- HTML -->
 
-<h2 class=”red-text”>CatPhotoApp</h2>
+<h2 class="red-text">CatPhotoApp</h2>
 
 <!-- CSS -->
 
