--- a/Responsive-Web-Design-Certification/2. Basic-CSS/10. Add Borders Around Your Elements.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/10. Add Borders Around Your Elements.html
@@ -1,1 +1,9 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    .thick-green-border {
+        border: 10px solid green;
+    }
+</style>
