--- a/Responsive-Web-Design-Certification/2. Basic-CSS/11. Add Rounded Corners with border-radius.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/11. Add Rounded Corners with border-radius.html
@@ -1,1 +1,10 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    .thick-green-border {
+        border: 10px solid green;
+        border-radius: 10px;
+    }
+</style>
