--- a/Responsive-Web-Design-Certification/2. Basic-CSS/13. Give a Background Color to a div Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/13. Give a Background Color to a div Element.html
@@ -1,1 +1,13 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<div class="silver-background"></div>
+
+<!-- CSS -->
+
+<style>
+    .silver-background {
+        background-color: silver;
+    }
+</style>
