--- a/Responsive-Web-Design-Certification/2. Basic-CSS/18. Add a Negative Margin to an Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/18. Add a Negative Margin to an Element.html
@@ -1,1 +1,13 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<style>
+    .blue-box {
+        background-color: blue;
+        color: #fff;
+        padding: 20px;
+
+        /* solution */
+        margin: -15px;
+        /* -------- */
+    }
+</style>
