--- a/Responsive-Web-Design-Certification/2. Basic-CSS/28. Override Styles in Subsequent CSS.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/28. Override Styles in Subsequent CSS.html
@@ -1,1 +1,13 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<h1 class="pink-text blue-text">Hello World!</h1>
+
+<!-- CSS -->
+
+<style>
+    .blue-text {
+        color: blue;
+    }
+</style>
