--- a/Responsive-Web-Design-Certification/2. Basic-CSS/30. Override Class Declarations with Inline Styles.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/30. Override Class Declarations with Inline Styles.html
@@ -1,1 +1,5 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<h1 id="orange-text" class="pink-text blue-text" style="color: white;">Hello World!</h1>
