--- a/Responsive-Web-Design-Certification/2. Basic-CSS/31. Override All Other Styles by using Important.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/31. Override All Other Styles by using Important.html
@@ -1,1 +1,10 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+
+<!-- CSS -->
+
+<style>
+    .pink-text {
+        color: pink !important;
+    }
+</style>
