--- a/Responsive-Web-Design-Certification/2. Basic-CSS/33. Use Hex Code to Mix Colors.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/33. Use Hex Code to Mix Colors.html
@@ -1,1 +1,22 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+
+<!-- CSS -->
+
+<style>
+    .red-text {
+        color: #FF0000;
+    }
+
+    .green-text {
+        color: #00FF00;
+    }
+
+    .dodger-blue-text {
+        color: #1E90FF;
+    }
+
+    .orange-text {
+        color: #FFA500;
+    }
+</style>
