--- a/Responsive-Web-Design-Certification/2. Basic-CSS/34. Use Abbreviated Hex Code.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/34. Use Abbreviated Hex Code.html
@@ -1,1 +1,20 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+<style>
+    .red-text {
+        color: #F00;
+    }
+
+    .fuchsia-text {
+        color: #F0F;
+    }
+
+    .cyan-text {
+        color: #0FF;
+    }
+
+    .green-text {
+        color: #0F0;
+    }
+</style>
