--- a/Responsive-Web-Design-Certification/2. Basic-CSS/38. Create a custom CSS Variable.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/38. Create a custom CSS Variable.html
@@ -1,1 +1,17 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    .penguin {
+        /* Only change code below this line */
+        --penguin-skin: gray;
+        /* Only change code above this line */
+        position: relative;
+        margin: auto;
+        display: block;
+        margin-top: 5%;
+        width: 300px;
+        height: 300px;
+    }
+</style>
