--- a/Responsive-Web-Design-Certification/2. Basic-CSS/42. Inherit CSS Variables.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/42. Inherit CSS Variables.html
@@ -1,1 +1,12 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+
+<!-- CSS -->
+
+<style>
+    :root {
+        /* Only change code below this line */
+        --penguin-belly: pink;
+        /* Only change code above this line */
+    }
+</style>
