--- a/Responsive-Web-Design-Certification/2. Basic-CSS/44. Use a media query to change a variable.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/44. Use a media query to change a variable.html
@@ -1,1 +1,14 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    @media (max-width: 350px) {
+        :root {
+            /* Only change code below this line */
+            --penguin-skin: black;
+            --penguin-size: 200px;
+            /* Only change code above this line */
+        }
+    }
+</style>
