--- a/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/04. Fill in the Blank with Placeholder Text.html
+++ b/Responsive-Web-Design-Certification/1. Basic-HTML-and-HTML5/04. Fill in the Blank with Placeholder Text.html
@@ -1,9 +1,5 @@
 
-
-<h1>Hello World</h1>
-<h2>CatPhotoApp</h2>
-
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
 
 <p>Kitty ipsum dolor sit amet, shed everywhere </p>
 
