--- a/Responsive-Web-Design-Certification/2. Basic-CSS/05. Change the Font Size of an Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/05. Change the Font Size of an Element.html
@@ -1,7 +1,9 @@
+
 <!-- SOLUTION ✅-->
 
+
 <style>
-    body {
-        background-color: black;
+    p { 
+        font-size: 16px; 
     }
 </style>
