--- a/Responsive-Web-Design-Certification/2. Basic-CSS/12. Make Circular Images with a border-radius.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/12. Make Circular Images with a border-radius.html
@@ -1,1 +1,14 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<style>
+    .thick-green-border {
+        border-color: green;
+        border-width: 10px;
+        border-style: solid;
+        border-radius: 10px;
+
+        /* solution */
+        border-radius: 50%;
+        /* -------- */
+    }
+</style>
