--- a/Responsive-Web-Design-Certification/2. Basic-CSS/16. Adjust the Padding of an Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/16. Adjust the Padding of an Element.html
@@ -1,1 +1,9 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<style>
+    .blue-box {
+        background-color: blue;
+        color: #fff;
+        padding: 20px;
+    }
+</style>
