--- a/Responsive-Web-Design-Certification/2. Basic-CSS/19. Add Different Padding to Each Side of an Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/19. Add Different Padding to Each Side of an Element.html
@@ -1,1 +1,12 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<style>
+    .blue-box {
+        background-color: blue;
+        color: #fff;
+
+        /* solution */
+        padding: 40px 20px 20px 40px;
+        /* ------- */
+    }
+</style>
