--- a/Responsive-Web-Design-Certification/2. Basic-CSS/24. Understand Absolute versus Relative Units.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/24. Understand Absolute versus Relative Units.html
@@ -1,1 +1,12 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<style>
+    .red-box {
+        background-color: red;
+        margin: 20px 40px 20px 40px;
+
+        /* solution */
+        padding: 1.5em;
+        /* ------- */
+    }
+</style>
