--- a/Responsive-Web-Design-Certification/2. Basic-CSS/26. Inherit Styles from the Body Element.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/26. Inherit Styles from the Body Element.html
@@ -1,1 +1,16 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<h1>Hello World!</h1>
+
+
+<!-- CSS -->
+
+<style>
+    body {
+        background-color: black;
+        color: green;
+        font-family: monospace;
+    }
+</style>
