--- a/Responsive-Web-Design-Certification/2. Basic-CSS/27. Prioritize One Style Over Another.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/27. Prioritize One Style Over Another.html
@@ -1,1 +1,14 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<h1 class="pink-text">Hello World!</h1>
+
+
+<!-- CSS -->
+
+<style>
+    .pink-text {
+        color: pink;
+    }
+</style>
