--- a/Responsive-Web-Design-Certification/2. Basic-CSS/29. Override Class Declarations by Styling ID Attributes.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/29. Override Class Declarations by Styling ID Attributes.html
@@ -1,1 +1,14 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- HTML -->
+
+<h1 id="orange-text" class="pink-text blue-text">Hello World!</h1>
+
+
+<!-- CSS -->
+
+<style>
+    #orange-text {
+        color: orange;
+    }
+</style>
