--- a/Responsive-Web-Design-Certification/2. Basic-CSS/37. Use CSS Variables to change several elements at once.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/37. Use CSS Variables to change several elements at once.html
@@ -1,1 +1,21 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    .penguin {
+
+        /* Only change code below this line */
+        --penguin-skin: gray;
+        --penguin-belly: white;
+        --penguin-beak: orange;
+        /* Only change code above this line */
+
+        position: relative;
+        margin: auto;
+        display: block;
+        margin-top: 5%;
+        width: 300px;
+        height: 300px;
+    }
+</style>
