--- a/Responsive-Web-Design-Certification/2. Basic-CSS/40. Attach a Fallback value to a CSS Variable.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/40. Attach a Fallback value to a CSS Variable.html
@@ -1,1 +1,31 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+
+<style>
+    .penguin-top {
+        top: 10%;
+        left: 25%;
+
+        /* Change code below this line */
+        background: var(--pengiun-skin, black);
+        /* Change code above this line */
+
+        width: 50%;
+        height: 45%;
+        border-radius: 70% 70% 60% 60%;
+    }
+
+    .penguin-bottom {
+        top: 40%;
+        left: 23.5%;
+
+        /* Change code below this line */
+        background: var(--pengiun-skin, black);
+        /* Change code above this line */
+
+        width: 53%;
+        height: 45%;
+        border-radius: 70% 70% 100% 100%;
+    }
+</style>
