--- a/Responsive-Web-Design-Certification/2. Basic-CSS/41. Improve Compatibility with Browser Fallbacks.html
+++ b/Responsive-Web-Design-Certification/2. Basic-CSS/41. Improve Compatibility with Browser Fallbacks.html
@@ -1,1 +1,18 @@
-<!-- SOLUTION -->
+<!-- SOLUTION ✅-->
+
+<!-- CSS -->
+<style>
+    :root {
+        --red-color: red;
+    }
+
+    .red-box {
+
+        /* solution */
+        background: red;
+        /* ------- */
+        background: var(--red-color);
+        height: 200px;
+        width: 200px;
+    }
+</style>
