Personal portfolio added

--- a/01. Responsive-Web-Design-Certification/08. Responsive-Web-Design-Projects/05. Build a Personal Portfolio Webpage/index.html
+++ b/01. Responsive-Web-Design-Certification/08. Responsive-Web-Design-Projects/05. Build a Personal Portfolio Webpage/index.html
@@ -35,7 +35,7 @@
 
     <section id="projects">
         <h1 class="project-text">These are some of my projects</h1>
-        <div class="cards-div">
+        <div class="cards-div project-tile">
             <a href="https://codepen.io/Shreya0204/pen/oNWdKMq" target="_blank" class="project-link">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
                     alt="project" />
@@ -52,7 +52,7 @@
         </div>
 
         <button>
-            <a href="https://github.com/shreya0204" target="_blank"><input class="submit" type="button" value="See More >"></a>
+            <a id="profile-link" href="https://github.com/shreya0204" target="_blank"><input class="submit" type="button" value="See More >"></a>
         </button>
     </section>
     <footer id="contact">
